# NonVisualCalculus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Directory.Build.props  README.md  build-installer.ps1  build_release.ps1  create-release.ps1
docs/: world-navigation-build.md  world-navigation-scouting.md
installer/: Cargo.toml  app.manifest  build.rs
installer/src/: cli.rs  gui.rs  i18n.rs  lib.rs  main.rs
installer/src/core/: detect.rs  github.rs  install.rs  manifest.rs  mod.rs  paths.rs  process.rs  uninstall.rs
lang/: ar.txt  de.txt  en.txt  es.txt  fr.txt  ja.txt  ko.txt  pl.txt  pt-br.txt  ru.txt  tr.txt  zh-tw.txt  zh.txt
src/DiscoAccess.Core/: DiscoAccess.Core.csproj
src/DiscoAccess.Module/: AbilityAdapter.cs  ArchetypeAdapter.cs  BarkReader.cs  CutsceneReader.cs  DialogueAdapter.cs  DoorReader.cs  FocusModule.cs  FocusReader.cs  GameLocalization.cs  InventoryAdapter.cs  JournalAdapter.cs  LanguageSync.cs  LoadingTipReader.cs  OptionAdapter.cs  QuoteReader.cs  SaveEntryAdapter.cs  ScreenAdapter.cs  SequenceLockHealer.cs  SkillAdapter.cs  ThoughtAdapter.cs  UiModule.cs
src/DiscoAccess.Tests/: ArchetypeAnnouncerTests.cs  BarkReaderTests.cs  BookmarkAnnouncerTests.cs  BookmarkFileTests.cs  CameraFollowTests.cs  CheckRollAnnouncerTests.cs  EntityNamingTests.cs  GeoTests.cs  GridNavigatorTests.cs  InputManagerTests.cs  InventoryItemAnnouncerTests.cs  ModSettingsTests.cs  NavigatorTests.cs  ObjectCueSystemTests.cs  OptionAnnouncerTests.cs  OverlayFrameworkTests.cs  RtlTextTests.cs  SaveEntryAnnouncerTests.cs  ScanBoundsTests.cs  ScannerTests.cs  SpatialTests.cs  (+11 more)
(+176 files in other folders)
